--- a/src/styles/CountryDetails.css
+++ b/src/styles/CountryDetails.css
@@ -67,7 +67,7 @@
 }
 
 .select-country option {
-  background: #5e72e4;
+  background: #7487f1;
   padding: 1rem 0;
   color: #fff;
   border: none;
