--- a/src/styles/Table.css
+++ b/src/styles/Table.css
@@ -26,6 +26,12 @@
   text-align: left;
 }
 
+@media screen and (max-width: 1000px) {
+  .table-country {
+    overflow-x: visible;
+  }
+}
+
 .table-country tr {
   display: grid;
   grid-template-columns: 1fr 20% 20% 20%;
